Fixed an error in the code

--- a/css/index.css
+++ b/css/index.css
@@ -33,7 +33,7 @@ h1.your-name {
     display:flex;
     flex-direction: column;
 }
-.expereicne-item {
+.experience-item {
     display: flex;
     margin-bottom:20px;
 }
